[package]
name = "honey-badger"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@sencoinex.com>"]
license = "MIT"
repository = "https://github.com/sencoinex/honey-badger-bft-rs"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
rand = "0.8.5"

asynchronous-common-subset = { path = "../asynchronous-common-subset" }
reliable-broadcast = { path = "../reliable-broadcast" }
binary-agreement = { path = "../binary-agreement" }
threshold-crypto = { path = "../threshold-crypto" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
# rkyv = { version = "0.7", features = ["validation"] }
logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }
